--- a/first-page.mdx
+++ b/first-page.mdx
@@ -1,3 +1,3 @@
-# The first page
+# The first page, edited
 
-This is the first page of the new game design book.
+This is the first page of the new game design book, edited.
