--- a/first-page.mdx
+++ b/first-page.mdx
@@ -1,3 +1,3 @@
-# The first page, edited
+# The first page, re-edited
 
-This is the first page of the new game design book, edited.
+This is the first page of the new game design book, red-edited.
