--- a/first-page.mdx
+++ b/first-page.mdx
@@ -1,3 +1,5 @@
-# The first page, re-edited
+---
+title: The first chapter
+---
 
-This is the first page of the new game design book, red-edited.
+This is the first chapter of the new game design book, red-edited.
