--- a/second-page.mdx
+++ b/second-page.mdx
@@ -1,3 +1,5 @@
-# This is the second page
+---
+title: This is the second chapter
+---
 
-And what a second page it is.
+And what a second chapter it is.
